Switch to TypeScript

--- a/theme/package.json
+++ b/theme/package.json
@@ -22,7 +22,12 @@
     "@emotion/core": "^10.0.14",
     "@mdx-js/react": "^1.0.21",
     "gatsby-plugin-theme-ui": "^0.2.2",
-    "theme-ui": "^0.2.2"
+    "gatsby-plugin-typescript": "^2.1.0",
+    "theme-ui": "^0.2.2",
+    "tslint": "^5.18.0",
+    "tslint-react": "^4.0.0",
+    "tslint-react-hooks": "^2.1.1",
+    "typescript": "^3.5.2"
   },
   "keywords": [
     "gatsby",
