--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ install:
   - yarn install
 
 script:
-  - yarn run lint
+  - yarn workspace gatsby-theme-nehalem lint
   - yarn workspace demo build
