--- a/theme/package.json
+++ b/theme/package.json
@@ -38,9 +38,13 @@
     "tslint-react-hooks": "^2.1.1"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.0.27",
+    "@mdx-js/react": "^1.0.27",
     "@types/styled-components": "^4.1.16",
+    "gatsby-plugin-mdx": "^1.0.13",
     "gatsby-plugin-styled-components": "^3.1.0",
     "gatsby-plugin-typescript": "^2.1.0",
+    "gatsby-source-filesystem": "^2.1.5",
     "styled-components": "^4.3.2",
     "styled-normalize": "^8.0.6",
     "typescript": "^3.5.2"
