--- a/theme/package.json
+++ b/theme/package.json
@@ -41,10 +41,12 @@
     "@mdx-js/mdx": "^1.0.27",
     "@mdx-js/react": "^1.0.27",
     "@types/styled-components": "^4.1.16",
+    "gatsby-plugin-lunr": "^1.5.1",
     "gatsby-plugin-mdx": "^1.0.13",
     "gatsby-plugin-styled-components": "^3.1.0",
     "gatsby-plugin-typescript": "^2.1.0",
     "gatsby-source-filesystem": "^2.1.5",
+    "react-icons": "^3.7.0",
     "react-string-replace": "^0.4.4",
     "react-typed": "^1.1.2",
     "styled-components": "^4.3.2",
