--- a/theme/package.json
+++ b/theme/package.json
@@ -47,14 +47,18 @@
     "gatsby-plugin-sharp": "^2.2.8",
     "gatsby-plugin-styled-components": "^3.1.0",
     "gatsby-plugin-typescript": "^2.1.0",
+    "gatsby-remark-autolink-headers": "^2.1.3",
+    "gatsby-remark-prismjs": "^3.3.3",
     "gatsby-source-filesystem": "^2.1.5",
-    "gatsby-transformer-remark": "^2.6.8",
+    "gatsby-transformer-remark": "^2.6.9",
     "gatsby-transformer-sharp": "^2.2.4",
+    "prismjs": "^1.17.1",
     "react-icons": "^3.7.0",
     "react-string-replace": "^0.4.4",
     "react-typed": "^1.1.2",
     "styled-components": "^4.3.2",
     "styled-normalize": "^8.0.6",
+    "tocbot": "^4.7.0",
     "typescript": "^3.5.2"
   },
   "keywords": [
