--- a/theme/package.json
+++ b/theme/package.json
@@ -44,6 +44,7 @@
     "gatsby-image": "^2.2.6",
     "gatsby-plugin-lunr": "^1.5.1",
     "gatsby-plugin-mdx": "^1.0.13",
+    "gatsby-plugin-page-creator": "^2.1.5",
     "gatsby-plugin-sharp": "^2.2.8",
     "gatsby-plugin-styled-components": "^3.1.0",
     "gatsby-plugin-typescript": "^2.1.0",
@@ -52,10 +53,12 @@
     "gatsby-source-filesystem": "^2.1.5",
     "gatsby-transformer-remark": "^2.6.9",
     "gatsby-transformer-sharp": "^2.2.4",
+    "gatsby-transformer-yaml": "^2.2.4",
     "prismjs": "^1.17.1",
     "react-icons": "^3.7.0",
     "react-string-replace": "^0.4.4",
     "react-typed": "^1.1.2",
+    "slugify": "^1.3.4",
     "styled-components": "^4.3.2",
     "styled-normalize": "^8.0.6",
     "tocbot": "^4.7.0",
