--- a/theme/package.json
+++ b/theme/package.json
@@ -42,10 +42,14 @@
     "@mdx-js/react": "^1.0.27",
     "@types/styled-components": "^4.1.16",
     "gatsby-image": "^2.2.6",
+    "gatsby-plugin-feed": "^2.3.5",
     "gatsby-plugin-lunr": "^1.5.1",
+    "gatsby-plugin-manifest": "^2.2.4",
     "gatsby-plugin-mdx": "^1.0.13",
     "gatsby-plugin-page-creator": "^2.1.5",
+    "gatsby-plugin-react-helmet": "^3.1.2",
     "gatsby-plugin-sharp": "^2.2.8",
+    "gatsby-plugin-sitemap": "^2.2.3",
     "gatsby-plugin-styled-components": "^3.1.0",
     "gatsby-plugin-typescript": "^2.1.0",
     "gatsby-remark-autolink-headers": "^2.1.3",
@@ -55,6 +59,7 @@
     "gatsby-transformer-sharp": "^2.2.4",
     "gatsby-transformer-yaml": "^2.2.4",
     "prismjs": "^1.17.1",
+    "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0",
     "react-string-replace": "^0.4.4",
     "react-typed": "^1.1.2",
