--- a/theme/package.json
+++ b/theme/package.json
@@ -53,6 +53,7 @@
     "gatsby-plugin-styled-components": "^3.1.0",
     "gatsby-plugin-typescript": "^2.1.0",
     "gatsby-remark-autolink-headers": "^2.1.3",
+    "gatsby-remark-images": "^3.1.7",
     "gatsby-remark-prismjs": "^3.3.3",
     "gatsby-source-filesystem": "^2.1.5",
     "gatsby-transformer-remark": "^2.6.9",
