Change package name

--- a/theme/package.json
+++ b/theme/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gatsby-theme-nehalem",
+  "name": "@nehalist/gatsby-theme-nehalem",
   "author": {
     "name": "Kevin Hirczy",
     "email": "kevin@nehalist.io",
