--- a/demo/content/tags.yml
+++ b/demo/content/tags.yml
@@ -1,12 +1,8 @@
-- name: JavaScript
-  color: "#ff0000"
-  icon: ./assets/images/javascript.svg
+- name: Programming
+  color: "#007acc"
+  icon: ./assets/images/typescript.svg
   featured: true
-- name: Whatever
+- name: Theme
   color: #00ffee
   icon: ./assets/images/nehalist_IconRound.png
-  featured: true
-- name: Wohoo
-  color: #ff3f9f
-  icon: ./assets/images/typescript.svg
   featured: true
