--- a/demo/package.json
+++ b/demo/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "gatsby": "^2.13.1",
-    "gatsby-theme-nehalem": "*",
+    "@nehalist/gatsby-theme-nehalem": "*",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
